# euler-rust

p001/: Cargo.toml
problems/: Cargo.toml
problems/src/: common.rs
q1/: Cargo.toml
q1/src/: main.rs
