[workspace]

[package]
name = "q1"
version = "0.1.0"
authors = ["terekete"]
edition = "2018"

[lib]
name = "common"
path = "src/common.rs"
crate-type = ["dylib"]

[dependencies]
failure = "0.1.8"
failure_derive = "0.1.8"
generic-matrix = "0.1.0"
getopts = "0.2.21"
glob = "0.3.0"
itertools = "0.9.0"
num-bigint = { version = "0.3.0", default-features = false }
num-integer = "0.1.43"
num-iter = "0.1.41"
num-rational = { version = "0.3.0", default-features = false }
num-traits = "0.2.12"
polynomial = "0.1.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
term = "0.6.1"
topological-sort = "0.1.0"
union-find = "0.3.2"
derive-try-from-primitive = "1.0.0"
pretty_env_logger = "0.4.0"
attohttpc = "0.15.0"

[dev-dependencies]
rand = "0.7.3"